@@ -1,0 +1,12 @@
+# Source and destination file names.
+test_source = "data/math.txt"
+test_destination = "math.xhtml"
+
+# Keyword parameters passed to publish_file.
+reader_name = "standalone"
+parser_name = "rst"
+writer_name = "html"
+
+# Extra setting we need
+
+# settings_overrides['use_latex_docinfo'] = 1
